update config file

--- a/Veloce/veloce.config
+++ b/Veloce/veloce.config
@@ -1,6 +1,5 @@
-rtlc -partition_module_xrtl veloce_top
-comp -hvl c
-comp -top veloce_top
-comp -num_boards 1
-hvl -cfiles hvl/ImageProcessorTestBench.cxx 
+comp -top synth_tb
+comp -single_step
 comp -platform D1S
+comp -num_boards 1
+comp -app legacy
