--- a/Veloce/veloce.config
+++ b/Veloce/veloce.config
@@ -1,3 +1,9 @@
 comp -top synth_tb
 comp -num_boards 1
 comp -platform D1S
+
+#Declare single step compile/analysis flow
+comp -single_step
+
+#ICE Legacy Support enabled
+comp -app legacy 
